Some changes in validation and Schema, also added swagger for API and did some changes in ReviewController
