# src/schema/reviews.js
@@ -5,7 +5,7 @@ const reviewSchema = Joi.object({
   reqId: Joi.number().required(),
   reqName: Joi.string().required(),
   reqType: Joi.string().valid("profile-creation", "profile-update").required(),
-  status: Joi.string().valid("accepted", "rejected", "pending").required(),
+  status: Joi.string().valid("accepted", "rejected", "pending"),
   employeeDetails: Joi.object({
     empName: Joi.string().max(30).required(),
     empEmail: Joi.string().email().required(),
@@ -16,15 +16,16 @@ const reviewSchema = Joi.object({
     empPhoto: Joi.string(),
     empDesignation: Joi.string(),
     empDepartment: Joi.string().required(),
-    empReportingManager: Joi.string().required(),
+    empReportingManager: Joi.string(),
     empConnections: Joi.number(),
     empHobbies: Joi.array(),
-    empAboutMe: Joi.string().required(),
+    empAboutMe: Joi.string(),
     empCurrentAddress: Joi.string().lowercase(),
     empResidentialAddress: Joi.string().lowercase(),
     empBand: Joi.string(),
     empCtc: Joi.number().min(0).required(),
-    empGraduation: Joi.string().required(),
+    empGraduation: Joi.string(),
+    empGraduationUniversity: Joi.string(),
     empPostGraduationUniversity: Joi.string(),
     empPostGraduation: Joi.string(),
     empPrimaryCapability: Joi.array(),
@@ -41,13 +42,17 @@ const reviewSchema = Joi.object({
         "SUPER_ADMIN"
       )
       .required(),
+    personalDetails: Joi.any(),
+    professionalDetails: Joi.any(),
+    skillsDetails: Joi.any(),
+    slackMemId: Joi.string(),
   }),
 }).options({ abortEarly: false });
 
 const reviewupdatedSchema = Joi.object({
-  reqId: Joi.number().required(),
-  reqName: Joi.string().required(),
-  reqType: Joi.string().valid("profile-creation", "profile-update").required(),
+  reqId: Joi.number(),
+  reqName: Joi.string(),
+  reqType: Joi.string().valid("profile-creation", "profile-update"),
   status: Joi.string().valid("accepted", "rejected", "pending").required(),
   employeeDetails: Joi.object({
     empName: Joi.string().max(30).required(),
@@ -84,6 +89,10 @@ const reviewupdatedSchema = Joi.object({
         "SUPER_ADMIN"
       )
       .required(),
+    personalDetails: Joi.any(),
+    professionalDetails: Joi.any(),
+    skillsDetails: Joi.any(),
+    slackMemId: Joi.any(),
   }),
 }).options({ abortEarly: false });
 
